basic/SecurityGroup.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  SecurityGroupForWebServer:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: aws-network-basis-cfn-web-sg
      GroupDescription: >-
        aws-network-basis-cfn SecurityGroup for web-server instance in
        public-subnet
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: HTTP
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: ICMP
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
      VpcId: !ImportValue 'aws-network-basis:VPC'
      Tags:
        - Key: Name
          Value: WEBSG
  SecurityGroupForDBServer:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: aws-network-basis-cfn-db-sg
      GroupDescription: >-
        aws-network-basis-cfn SecurityGroup for db-server instance in
        private-subnet
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: MySQL
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
        - CidrIp: 0.0.0.0/0
          Description: ICMP
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
      VpcId: !ImportValue 'aws-network-basis:VPC'
      Tags:
        - Key: Name
          Value: DBSG
Outputs:
  SecurityGroupForWebServer:
    Value: !Ref SecurityGroupForWebServer
    Export:
      Name: 'SecurityGroup:SecurityGroupForWebServer'
  SecurityGroupForDBServer:
    Value: !Ref SecurityGroupForDBServer
    Export:
      Name: 'SecurityGroup:SecurityGroupForDBServer'
